2005-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/chord-name.scm (alteration->text-accidental-markup): change
	- to . 

	* scm/output-ps.scm (utf8-string): add utf8-string for completeness.

	* scm/framework-ps.scm (dump-stencil-as-EPS): new function

	* Documentation/user/invoking.itely (Invoking lilypond): add note
	about EPS backend.

	* scm/framework-eps.scm: new file: create per-system/per-page EPS
	files for inclusion in lilypond-book document.

	* input/tutorial/lbook-latex-test.tex: rename from lilbook.tex

	* input/tutorial/lbook-texi-test.texi: new file.

	* scm/safe-lily.scm (safe-objects): add
	{begin,end}-of-line-(in)?visible as safe.
 
2005-01-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/changing-defaults.itely: fixed example
	of (dynamics).

2005-01-29  Graham Percival  <gperlist@shaw.ca>

	* lily/main.cc: fix info about -o=FILE.

2005-01-29  Werner Lemberg  <wl@gnu.org>

	* mf/feta-toevallig.mf ("Natural"): Completely changed the
	construction to assure smooth transition from straight to curved
	lines.

2005-01-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil.cc (moved_to_edge): don't halt on adding empty
	stencils.

	* ps/lilyponddefs.ps: add start-page, start-system doesn't
	translate to top of page. Fixes alignment problems of
	lilypond-generated EPS files.

2005-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/part-combiner.scm (analyse-spanner-states): trigger on
	crescendo-end as well, since Decrescendo maybe ended with Stop
	Crescendo.). Fixes: partcombine-diminuendo.ly

	* scm/script.scm (default-script-alist): swap portato symbols.

	* lily/instrument-name-engraver.cc (acknowledge_grob): typo.

	* lily/paper-outputter-scheme.cc (LY_DEFINE):
	ly:outputter-port. New function.

	* scm/framework-ps.scm (output-classic-framework): dump a
	-systems.texi too
	(output-classic-framework): dump multiple systems on an "infinite"
	page EPS including fonts. 
