@@ -1,3 +1,8 @@
+2005-01-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/framework-ps.scm (dump-stencil-as-EPS): robustness: ensure
+	that both X and Y extents of bbox are non-nil.
+
 2005-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/chord-name.scm (alteration->text-accidental-markup): change
